--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-DB_HOST=localhost
-DB_PORT=0000
-DB_USERNAME=user
-DB_PASSWORD=pass
-DB_DATABASE=name_db
+SERVER_HOST_URI=localhost
+SERVER_HOST_PORT=3333
 
-JWT_SECRECT_ACCESS=key
+DB_TYPE=postgres
+DB_HOST=localhost
+DB_PORT=5432
+
+DB_USERNAME=postgres
+DB_PASSWORD=12795
+DB_DATABASE=name
+JWT_SECRECT_ACCESS=ssss
+NODE_ENV=production
